# 0512

skills/stock-study/: KICKOFF.md  Makefile  README.md  SKILL.md  conftest.py  docker-compose.yml  pyproject.toml
skills/stock-study/.clawhub/: origin.json
skills/stock-study/compliance/: banned_phrases.yaml  disclaimer.txt  restricted_issuers.yaml
skills/stock-study/docs/: ARCHITECTURE.md
skills/stock-study/docs/adr/: 0001-tier-architecture.md  0002-prompt-versioning.md  0003-three-layer-safety.md  0004-pydantic-single-source.md  0005-thompson-sampling-not-ppo.md
skills/stock-study/docs/onboarding/: D1_chen_xiatong.md  D1_du_huiyi.md  D1_fu_yan.md  D1_luo_yang.md  D1_zhang_tao.md
skills/stock-study/docs/playbooks/: incident_playbooks.md
skills/stock-study/infra/db/: schema.sql
skills/stock-study/infra/prometheus/: prometheus.yml
skills/stock-study/knowledge/golden/: 30_tickers.yaml  5_regimes.yaml
skills/stock-study/knowledge/heuristics/: example.yaml
skills/stock-study/observability/: __init__.py  budget.py  cost_ledger.py  metrics.py  tracing.py
skills/stock-study/prompts/: registry.yaml
skills/stock-study/prompts/agent_xt_reasoner/: v1.0.0.md
skills/stock-study/prompts/agent_zt_evolver/: v1.0.0.md
skills/stock-study/prompts/compliance_sentinel/: v1.0.0.md
skills/stock-study/safety/: __init__.py  exceptions.py  output_gate.py  sanitizer.py  tool_guard.py
skills/stock-study/safety/patterns/: pi_patterns.yaml
skills/stock-study/schemas/: __init__.py  compliance.py  data.py  factors.py  narratives.py  publish.py  scores.py  tasks.py
skills/stock-study/tests/adversarial/: __init__.py  pi_chinese.py  pi_english.py  pi_mixed.py  pi_news.py  (+2 more)
skills/stock-study/tier2/: agent_xt_reasoner.py  base_agent.py  compliance_sentinel.py
skills/stock-study/tier3/: agent_zt_evolver.py
skills/stock-study/workflows/: adhoc_query.py  daily_run.py  monthly_evolve.py
(+124 files in other folders)
