[project]
name = "stock-study"
version = "3.2.0"
description = "LynAI Mines ASX mining stock AI research system"
requires-python = ">=3.11"
authors = [{name = "LynAI Mines"}]

dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.7.0",
    "prefect>=2.20.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "yfinance>=0.2.40",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "alembic>=1.13.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "freezegun>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "pi_*.py"]
markers = [
    "golden: tests requiring golden dataset",
    "adversarial: prompt injection / adversarial tests",
    "slow: tests that take > 5s",
    "requires_llm: tests that call the real Anthropic API (excluded in CI)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "B", "UP", "S", "C4", "SIM"]
ignore = ["E501", "S101"]  # pytest assert OK

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
